[gd_scene load_steps=4 format=3 uid="uid://dd1hdbi0o53lg"]

[ext_resource type="Script" uid="uid://c40t4nfpt57m3" path="res://puzzle/ui/side_menu/side_menu.gd" id="1_pxblx"]
[ext_resource type="Theme" uid="uid://88cahjm0kd3k" path="res://themes/main.tres" id="2_uku1s"]
[ext_resource type="Texture2D" uid="uid://5i8b436g3s53" path="res://puzzle/ui/side_menu/icons/material-symbols--menu-rounded.png" id="3_t4k15"]

[node name="SideMenu" type="HBoxContainer"]
offset_right = 30.0
offset_bottom = 40.0
size_flags_horizontal = 0
mouse_filter = 0
theme_override_constants/separation = 5
script = ExtResource("1_pxblx")
panel_ratio = 0.333333

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HideButton" type="Button" parent="MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("2_uku1s")
theme_type_variation = &"SideMenuIcon"
icon = ExtResource("3_t4k15")
expand_icon = true

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_order_changed" from="." to="." method="_on_child_order_changed"]
[connection signal="pressed" from="MarginContainer/ButtonContainer/HideButton" to="." method="hide_menu"]
